examples/panic/panic.out
# To run this sample, navigate to the directory that contains the
# `.bal` file, and execute the `ballerina run` command.
$ ballerina run panic.bal
Record ID: 1, value: record1
error: Record is nil
        at panic:readRecord(panic.bal:13)
           panic:main(panic.bal:28)
